[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Ochi Yuma <ochiyuma.ochi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
streamlit = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
